# Telegramm_trading1

./: .gitignore  README.md  config.py  database.py  main.py  message_parser.py  pyproject.toml  pytest.ini  requirements.txt  send_test_signal.py  setup.py  strategic_context.yaml  trades.db  trading.py  trading_bot.db  transaction_handler.py  wallet.py
api/: __init__.py  jupiter.py  quicknode.py
commands/: __init__.py  command_handler.py
config/: config.py  database.py  default_config.yaml  logging.py  security.py
core/: bot_coordinator.py  command_handler.py  config_manager.py  env_constants.py  error_handler.py  notification_manager.py  repository_factory.py  signal_processor.py  stats_updater.py
database/: __init__.py  base_repository.py  channel_repository.py  check_components.py  error_handler.py  partition_manager.py  performance_monitor.py  performance_repository.py  portfolio_repository.py  position_repository.py  postgres_connection.py  signal_repository.py  stats_repository.py  trade_repository.py  transaction_repo.py
docs/: README.md  api.md  api_development.md  api_monitoring.md  api_performance_monitoring.md  api_testing.md  architecture.md  configuration.md  database_monitoring.md  deployment.md  development.md  error_monitoring.md  log_monitoring.md  monitoring.md  network_monitoring.md  performance_monitoring.md  resource_monitoring.md  security.md  security_monitoring.md  testing.md  transaction_monitoring.md
implementations/: api.py  client.py  config.py  database.py  dex_api.py  error_handler.py  logging.py  market_api.py  monitor_service.py  (+9 more)
(+119 files in other folders)
